@@ -173,9 +173,13 @@ class Ui_Qwad(object):
         self.Title.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
         self.Title.setObjectName("Title")
         self.comboBox = QtGui.QComboBox(self.NUStab)
-        self.comboBox.setGeometry(QtCore.QRect(125, 10, 291, 25))
+        self.comboBox.setGeometry(QtCore.QRect(125, 10, 150, 25))
         self.comboBox.setObjectName("comboBox")
         self.comboBox.addItem(QtCore.QString())
+        self.comboBox2 = QtGui.QComboBox(self.NUStab)
+        self.comboBox2.setGeometry(QtCore.QRect(280, 10, 170, 25))
+        self.comboBox2.setObjectName("comboBox2")
+        self.comboBox2.addItem(QtCore.QString())
         self.decryptCheck = QtGui.QCheckBox(self.NUStab)
         self.decryptCheck.setEnabled(False)
         self.decryptCheck.setGeometry(QtCore.QRect(40, 120, 171, 23))
@@ -260,7 +264,8 @@ class Ui_Qwad(object):
         self.enteredTitleID.setText(QtGui.QApplication.translate("Qwad", "000000000000000000", None, QtGui.QApplication.UnicodeUTF8))
         self.TitleIDlabel.setText(QtGui.QApplication.translate("Qwad", "Title ID", None, QtGui.QApplication.UnicodeUTF8))
         self.Title.setText(QtGui.QApplication.translate("Qwad", "Choose title:", None, QtGui.QApplication.UnicodeUTF8))
-        self.comboBox.setItemText(0, QtGui.QApplication.translate("Qwad", "Custom title ID", None, QtGui.QApplication.UnicodeUTF8))
+        self.comboBox.setItemText(0, QtGui.QApplication.translate("Qwad", "Choose IOS", None, QtGui.QApplication.UnicodeUTF8))
+        self.comboBox2.setItemText(0, QtGui.QApplication.translate("Qwad", "Choose Channel/Menu", None, QtGui.QApplication.UnicodeUTF8))
         self.decryptCheck.setText(QtGui.QApplication.translate("Qwad", "Decrypt", None, QtGui.QApplication.UnicodeUTF8))
         self.pack_in_WAD_checkbox.setText(QtGui.QApplication.translate("Qwad", "Pack into WAD", None, QtGui.QApplication.UnicodeUTF8))
         self.VersionlineEdit.setText(QtGui.QApplication.translate("Qwad", "unset", None, QtGui.QApplication.UnicodeUTF8))
