@@ -44,13 +44,6 @@ def _generate_index(str):
     return tuple(index)
 
 TitleDict = {
-"BOOT2":"0000000100000001",
-"System Menu [JAP]":"0000000100000002",
-"System Menu [PAL]":"0000000100000002",
-"System Menu [USA]":"0000000100000002",
-"System Menu [KOR]":"0000000100000002",
-"BC":"0000000100000100",
-"MIOS":"0000000100000101",
 "IOS4":"0000000100000004",
 "IOS9":"0000000100000009",
 "IOS10":"000000010000000a",
@@ -92,25 +85,32 @@ TitleDict = {
 "IOS70":"0000000100000046",
 "IOS80":"0000000100000050", }
 
-Channeldict = {
+ChannelDict = {
+"BOOT2":"0000000100000001",
+"System Menu [JAP]":"0000000100000002",
+"System Menu [PAL]":"0000000100000002",
+"System Menu [USA]":"0000000100000002",
+"System Menu [KOR]":"0000000100000002",
+"BC":"0000000100000100",
+"MIOS":"0000000100000101",
 #TODO: Add remaining Channels + UI
 #QT_TR_NOOP("Wii Speak Channel"):"00010001484346xx",
 #QT_TR_NOOP("Photo Channel 1.1 [USA]"):"0001000148415a45",
-QT_TR_NOOP("Photo Channel 1.1 [PAL]"):"0001000148415a50",
+#QT_TR_NOOP("Photo Channel 1.1 [PAL]"):"0001000148415a50",
 #QT_TR_NOOP("Photo Channel 1.1 [JAP]"):"0001000148415a4a",
 #QT_TR_NOOP("Metroid Prime 3 Preview"):"00010001484157xx",
-QT_TR_NOOP("Nintendo Channel"):"00010001484154xx",
-QT_TR_NOOP("Mii Contest Channel [USA]"):"0001000148415045",
-QT_TR_NOOP("Mii Contest Channel [PAL]"):"0001000148415050",
-QT_TR_NOOP("Mii Contest Channel [JAP]"):"000100014841504A",
-QT_TR_NOOP("Everyone Votes Channel [USA]"):"0001000148414a45",
-QT_TR_NOOP("Everyone Votes Channel [PAL]"):"0001000148414a50",
-QT_TR_NOOP("Everyone Votes Channel [JAP]"):"0001000148414a4A",
+#QT_TR_NOOP("Nintendo Channel"):"00010001484154xx",
+#QT_TR_NOOP("Mii Contest Channel [USA]"):"0001000148415045",
+#QT_TR_NOOP("Mii Contest Channel [PAL]"):"0001000148415050",
+#QT_TR_NOOP("Mii Contest Channel [JAP]"):"000100014841504A",
+#QT_TR_NOOP("Everyone Votes Channel [USA]"):"0001000148414a45",
+#QT_TR_NOOP("Everyone Votes Channel [PAL]"):"0001000148414a50",
+#QT_TR_NOOP("Everyone Votes Channel [JAP]"):"0001000148414a4A",
 #QT_TR_NOOP("Opera / Internet Channel"):"00010001484144xx",
-QT_TR_NOOP("Photo Channel"):"0001000248414141",
-QT_TR_NOOP("Shopping Channel"):"0001000248414241",
-QT_TR_NOOP("Mii Channel"):"001000248414341",
-QT_TR_NOOP("Photo Channel 1.1"):"001000248415941",
+#QT_TR_NOOP("Photo Channel"):"0001000248414141",
+#QT_TR_NOOP("Shopping Channel"):"0001000248414241",
+#QT_TR_NOOP("Mii Channel"):"001000248414341",
+#QT_TR_NOOP("Photo Channel 1.1"):"001000248415941",
 #QT_TR_NOOP("Wii Message Board"):"001000148414541",
 #QT_TR_NOOP("Weather Channel-HAFx"):"00010002484146xx",
 #QT_TR_NOOP("Weather Channel-HAFA"):"0001000248414641",
